[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lumi-agent-sandbox"
version = "0.1.0"
description = "Small LUMI task sandbox harness for agent workflows"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lumi-agent-sandbox = "lumi_agent_sandbox.cli:main"
